<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QQ应用小助手</string>
    <string name="app_name_qqcard">魔法卡片</string>
    <string name="app_name_qqfarm">QQ农场</string>
    <string name="app_name_qqtower">QQ大楼</string>
    <string name="action_settings">添加</string>
    <string name="action_del">删除</string>
    <string name="startWork">开始工作</string>
    <string name="stopWork">停止工作</string>
    <string name="str_auto_put_card">自动练卡</string>
    <string name="str_refresh_cardInfo">刷新卡片</string>
    <string name="v_name">名称</string>
    <string name="v_sid">sid</string>
    <string name="str_valid">启 用</string>
    <string name="str_invalid">禁 用</string>
    <string name="str_apptype">应用类型</string>
    <string name="str_save">保存</string>
    <string name="str_cancel">取消</string>
    <string name="str_ok">确定</string>
    <string name="str_error_noname">请填写名称</string>
    <string name="str_error_nosid">请填写sid</string>
    <string name="str_succ_save">保存成功</string>
    <string name="str_streal">偷 炉</string>
    <string name="str_sel_type">请选择应用类型</string>
    <string name="str_confirm_del">是否删除该项?</string>
    <string name="str_alert_refresh_card">刷新卡片耗时较长，请耐心等待……</string>
    <string name="str_alert_no_cardInfo">没有卡片信息，请点击刷新卡片获取</string>

</resources>
