<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:id="@+id/edit_v_workid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/edit_v_sid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_status"
        android:layout_alignLeft="@+id/edit_v_name"
        android:text="@string/v_sid" />

    <EditText
        android:id="@+id/edit_sid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name"
        android:layout_below="@+id/edit_name"
        android:layout_marginTop="23dp"
        android:ems="10" />

    <Spinner
        android:id="@+id/edit_sp_worktype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/edit_v_apptype" />

    <TextView
        android:id="@+id/edit_v_apptype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_sp_worktype"
        android:layout_marginTop="14dp"
        android:text="@string/str_apptype" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_sp_worktype"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <TextView
        android:id="@+id/edit_v_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_sid"
        android:layout_alignLeft="@+id/edit_v_apptype"
        android:text="@string/v_name" />

    <Button
        android:id="@+id/edit_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_btn_save"
        android:layout_alignBottom="@+id/edit_btn_save"
        android:layout_alignRight="@+id/edit_sid"
        android:layout_marginRight="25dp"
        android:text="@string/str_cancel" />

    <Switch
        android:id="@+id/edit_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_v_sid"
        android:layout_below="@+id/edit_sid"
        android:layout_marginTop="24dp"
        android:text="Switch" />

    <Button
        android:id="@+id/edit_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/edit_v_apptype"
        android:text="@string/str_save" />

    <Switch
        android:id="@+id/edit_steal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_status"
        android:layout_below="@+id/edit_status"
        android:layout_marginTop="26dp"
        android:text="@string/str_streal" />

    <Button
        android:id="@+id/edit_btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_tv_auto"
        android:layout_alignBottom="@+id/edit_tv_auto"
        android:layout_alignParentRight="true"
        android:text="@string/str_refresh_cardInfo" />

    <Spinner
        android:id="@+id/edit_sp_cardsuits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_steal"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/edit_btn_refresh"
        android:layout_toRightOf="@+id/edit_tv_auto" />

    <TextView
        android:id="@+id/edit_tv_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_sp_cardsuits"
        android:layout_marginBottom="14dp"
        android:layout_toLeftOf="@+id/edit_btn_save"
        android:text="@string/str_auto_put_card" />

</RelativeLayout>