<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:id="@+id/qqfarm_edit_v_workid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/qqfarm_edit_v_sid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/qqfarm_edit_status"
        android:layout_alignLeft="@+id/qqfarm_edit_v_name"
        android:text="@string/v_sid" />

    <EditText
        android:id="@+id/qqfarm_edit_sid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qqfarm_edit_name"
        android:layout_below="@+id/qqfarm_edit_name"
        android:layout_marginTop="23dp"
        android:ems="10" 
        android:hint="@string/v_sid"/>

    <TextView
        android:id="@+id/qqfarm_edit_v_apptype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/app_name_qqfarm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/qqfarm_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/qqfarm_edit_v_apptype"
        android:ems="10" 
        android:hint="@string/v_name"/>

    <TextView
        android:id="@+id/qqfarm_edit_v_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/qqfarm_edit_sid"
        android:layout_alignLeft="@+id/qqfarm_edit_v_apptype"
        android:text="@string/v_name" />

    <Button
        android:id="@+id/qqfarm_edit_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/qqfarm_edit_btn_save"
        android:layout_alignBottom="@+id/qqfarm_edit_btn_save"
        android:layout_alignRight="@+id/qqfarm_edit_sid"
        android:layout_marginRight="25dp"
        android:text="@string/str_cancel" />

    <Switch
        android:id="@+id/qqfarm_edit_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qqfarm_edit_v_sid"
        android:layout_below="@+id/qqfarm_edit_sid"
        android:layout_marginTop="24dp"
        android:text="@string/str_invalid" />

    <Button
        android:id="@+id/qqfarm_edit_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/qqfarm_edit_v_apptype"
        android:text="@string/str_save" />

</RelativeLayout>